Created custom JRE